--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href=".src/images/favicon-32x32.png"
+      href="src/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href=".src/css/style.css" />
-    <link rel="stylesheet" href=".src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/reset.css" />
 
     <title>Frontend Mentor | Product preview card component</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
