correções nos links  index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span class="valor-total">$169.99</span>
           </div>
           <button class="cart">
-            <img src="/src/images/icon-cart.svg" alt="Carrinho de Compras" />
+            <img src="src/images/icon-cart.svg" alt="Carrinho de Compras" />
             <p class="text">Add to Cart</p>
           </button>
         </section>
@@ -66,7 +66,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href=""> Leonardo Marcilino</a>.
+          >. Coded by <a href="https://github.com/Leonardo-Marcilino" target="_blank"> Leonardo Marcilino</a>.
       </div>
   </body>
 </html>
