--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <button class="cart">
             <img
-              src="/src/images/icon-cart.svg"
+              src="./src/images/icon-cart.svg"
               alt="Icon of a shopping cart"
             />
             <p class="text">Add to Cart</p>
